--- a/package.json
+++ b/package.json
@@ -18,7 +18,18 @@
   },
   "homepage": "https://github.com/lambda-hackathon-signup/node-backend#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^8.0.0",
+    "ejs": "^2.6.2",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "knex": "^0.18.1",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
+    "sqlite3": "^4.0.9"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
